--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Aug 03 09:12:55 CST 2016
+#Thu Aug 25 12:55:25 CST 2016
+systemProp.https.proxyPort=8080
+systemProp.http.proxyHost=proxy3.bj.petrochina
+systemProp.https.proxyHost=proxy3.bj.petrochina
+systemProp.http.proxyPort=8080
