--- a/mlog/src/main/AndroidManifest.xml
+++ b/mlog/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="yanchao.shahe.bj.mlog">
+          package="com.cn.tools.mlog">
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
