把消息的格式化抽象出一个接口，由使用者自己定义，并且自己决定如何输出到终端，mlog只负责把日志输出到文件

--- a/mlog/src/main/AndroidManifest.xml
+++ b/mlog/src/main/AndroidManifest.xml
@@ -2,11 +2,9 @@
           package="com.cn.tools.mlog">
 
     <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18"/>
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18"/>
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
